--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "test-driven-todo-api",
-  "version": "0.0.0",
+  "name": "myexample",
+  "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sf-wdi-labs/test-driven-todo-api.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sf-wdi-labs/test-driven-todo-api/issues"
-  },
-  "homepage": "https://github.com/sf-wdi-labs/test-driven-todo-api",
   "dependencies": {
-    "body-parser": "^1.14.1",
-    "chai": "^3.4.0",
-    "express": "^4.13.3",
-    "mocha": "^2.5.3",
-    "q": "^1.4.1",
-    "request": "^2.65.0",
-    "underscore": "^1.8.3"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3"
   }
 }
